2004-09-08  Christian Reis <kiko@async.com.br>

	* applications.src: fix Mum, broken link reported by Nicolas Girard
	<nicolas.girard@nerim.net>.

	* default.css: remove h5's bottom margin.

2004-09-04  Christian Reis <kiko@async.com.br>
	
	* feed.py, newsitems.py, news.src, index.src: merge contributed
	RSS-generating code from R. Sridhar <sridharinfinity@users.sf.net>;
	migrated all news to the newsitems.py format I just invented, and
	updated the pages to use the versions being generated.

	Keep an eye out for breakage, it should work fine but who knows :-)

2004-08-20  Christian Reis <kiko@async.com.br>

	* applications.src: the claw is dead

2004-08-12  John Finlay  <finlay@moeraki.com>

	* newsitems.src: Add item re devhelp support in the Reference Manual.

	* reference.src: Update version and date info.

2004-08-06  Christian Reis <kiko@async.com.br>

	* applications.src: add Micropics.

2004-08-06  John Finlay  <finlay@moeraki.com>

	* developer.src: Remove some bug links and add more info on source
	location in CVS.
	* header.src: Add ViewCVS link.
	Fixes #149530 (Abel Daniel)

2004-08-05  John Finlay  <finlay@moeraki.com>

	* Makefile: Add download of tbz2 reference tarball

	* newsitems.src: Add info on new tut and ref

	* tutorial.src: Udpate version and date

	* reference.src: Update version and date. Add link to tbz2 tarball.

2004-08-05  Christian Reis <kiko@async.com.br>

	* Makefile: made the tarball unpacking happen even when one of the
	downloads fail.

2004-07-23  Johan Dahlin  <johan@gnome.org>

	* newsitems.src: 2.3.94

2004-07-22  Christian Reis <kiko@async.com.br>

	* applications.src: rehack UPS Monitor

2004-07-21  Christian Reis <kiko@async.com.br>

	* applications.src: recategorize some of the apps, some rewording

2004-07-20  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* applications.src: added Blogfish and Amauta UPS monitor

2004-07-19  Lorenzo Gil Sanchez  <lgs@sicem.biz>

	* newsitems.src: added announce for PyGTK 2.3.93
