@@ -1,0 +1,1 @@
+AddType application/xml;charset=utf-8 .rss
