@@ -5,6 +5,9 @@
 
 	* default.css: remove h5's bottom margin.
 
+	* Makefile, .htaccess: ensure we supply RSS content as XML and UTF-8.
+	Also make the RSS and news-related rules smarter.
+
 2004-09-04  Christian Reis <kiko@async.com.br>
 	
 	* feed.py, newsitems.py, news.src, index.src: merge contributed
